2008-02-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* porting/interrupts.t: Formatting.

2008-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/file.t, shell/general.t, shell/memory.t, shell/network.t,
	shell/rtems.t: More descriptions and examples added.

2008-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/file.t, shell/general.t, shell/memory.t, shell/network.t,
	shell/rtems.t: Add mount and cp command information from Chris Johns.
	Reformat some things.

2008-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/file.t, shell/general.t, shell/memory.t, shell/network.t,
	shell/rtems.t: A bit of clean up on the script.

2008-02-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shell/file.t, shell/general.t, shell/memory.t, shell/network.t,
	shell/rtems.t: Change configure messages per Chris Johns suggestion.

2008-02-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, index.html.in: Add initial version of
	RTEMS Shell Manual. This is largely a starting point but has most of
	the required structure.
	* shell/.cvsignore, shell/Makefile.am, shell/file.t, shell/general.t,
	shell/memory.t, shell/network.t, shell/preface.texi, shell/rtems.t,
	shell/shell.texi: New files.

2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networking/networkapp.t: Add configuration parameters for network
	stack efficiency multiplier and default socket buffer sizes.

2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/object.t: Added some examples.

2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/object.t: Add Ada binding for Object Services.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* index.html.in: Update copyright year.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ada_user/Makefile.am, ada_user/ada_user.texi: Now builds.

2008-01-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/.cvsignore, user/Makefile.am, user/c_user.texi, user/concepts.t,